<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexabold"
            android:gravity="center"
            android:text="@string/signUpTitle"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/signUpFirstName"
            android:fontFamily="@font/nexalight"
            android:hint="@string/signUpFirstName"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/singUpLastName"
            android:fontFamily="@font/nexalight"
            android:hint="@string/singUpLastName"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/singUpEmailAddress"
            android:fontFamily="@font/nexalight"
            android:hint="@string/singUpEmailAddress"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/signUpUsername"
            android:fontFamily="@font/nexalight"
            android:hint="@string/signUpUsername"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/signUpPassword"
            android:fontFamily="@font/nexalight"
            android:hint="@string/signUpPassword"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/signUpConfirmPassword"
            android:fontFamily="@font/nexalight"
            android:hint="@string/signUpConfirmPassword"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/nexabold"
            android:onClick="onRegister"
            android:text="@string/signUpRegister"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@font/nexalight"
            android:text="@string/signUpAgreement"
            android:textAlignment="center"
            android:textColor="#000" />

    </LinearLayout>
</ScrollView>